--- a/style.css
+++ b/style.css
@@ -25,12 +25,15 @@
     cursor: pointer;
     font-size: 2rem;
     border: 1px solid rgb(187, 176, 230);
+    border-radius: 5px;
     outline: none;
     background-color: rgba(255, 255, 255, .75);
   }
   
   .calculator-grid > button:hover {
     background-color: #f8d7fca1;
+    border: 1px solid rgb(187, 176, 230);
+    border-radius: 5px;
   }
   
   .span-two {
@@ -41,6 +44,8 @@
     height: 170px;
     grid-column: 1 / -1;
     background-color: rgba(0, 0, 0, .75);
+    border: 2px solid rgb(187, 176, 230);
+    border-radius: 7px;
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
